
LDADD = ../libndn-cpp.la

noinst_PROGRAMS = test-encode-decode-benchmark \
	test-encode-decode-data \
	test-encode-decode-forwarding-entry \
	test-encode-decode-interest \
	test-get-async \
	test-publish-async

test_encode_decode_benchmark_SOURCES = test-encode-decode-benchmark.cpp

test_encode_decode_data_SOURCES = test-encode-decode-data.cpp

test_encode_decode_forwarding_entry_SOURCES = test-encode-decode-forwarding-entry.cpp

test_encode_decode_interest_SOURCES = test-encode-decode-interest.cpp

test_get_async_SOURCES = test-get-async.cpp

test_publish_async_SOURCES = test-publish-async.cpp
