
LDADD = ../libndn-cpp.la @BOOST_SYSTEM_LIB@

noinst_PROGRAMS = \
	test-get-async \
	test-publish-async \
	test-encode-decode-benchmark

test_encode_decode_benchmark_SOURCES = test-encode-decode-benchmark.cpp

test_get_async_SOURCES = test-get-async.cpp

test_publish_async_SOURCES = test-publish-async.cpp
