
bin_PROGRAMS = tlvdump ndncatchunks ndnputchunks

tlvdump_SOURCES = tlvdump.cpp
tlvdump_LDADD = ../libndn-cpp.la @BOOST_SYSTEM_LIB@

ndncatchunks_SOURCES = ndncatchunks.cpp
ndncatchunks_LDADD = ../libndn-cpp.la @BOOST_SYSTEM_LIB@

ndnputchunks_SOURCES = ndnputchunks.cpp
ndnputchunks_LDADD = ../libndn-cpp.la @BOOST_SYSTEM_LIB@
